--- a/launchmon/src/linux/Makefile.am
+++ b/launchmon/src/linux/Makefile.am
@@ -46,62 +46,11 @@
 ##
 
 SUBDIRS                 = lmon_api
-
-if WITH_ALPS
-INCLUDES                = -I.. -I@ALPS_INC_DIR@ -I@ARCHHEADER@
-else
 INCLUDES                = -I.. -I@ARCHHEADER@
-endif
-
-#INCLUDES                = -I.. -I@ARCHHEADER@
-BITS                    = @LIBBITSUFFIX@
+#BITS                    = @LIBBITSUFFIX@
 bin_PROGRAMS            = launchmon
-if WITH_ALPS
 launchmon_SOURCES       = main.cxx \
-	                  sdbg_linux_launchmon_xt.cxx \
-	                  lmon_api/lmon_lmonp_msg.cxx \
-	                  sdbg_linux_mach.cxx \
-	                  lmon_api/lmon_say_msg.cxx \
-			  sdbg_linux_thr_db.cxx \
-			  sdbg_proc_service.cxx \
-			  ../sdbg_self_trace.cxx \
-			  ../sdbg_opt.cxx \
-			  ../sdbg_base_bp.hxx \
-		          ../sdbg_base_launchmon_impl.hxx  \
-			  ../sdbg_base_tracer.hxx \
-		          ../sdbg_self_trace.hxx \
-			  ../sdbg_base_driver.hxx \
-		          ../sdbg_base_mach.hxx \
-		          ../sdbg_base_ttracer.hxx \
-		          ../sdbg_signal_hlr.hxx \
-			  ../sdbg_base_driver_impl.hxx  \
-			  ../sdbg_base_mach_impl.hxx  \
-		          ../sdbg_event_manager.hxx \
-		          ../sdbg_signal_hlr_impl.hxx \
-		          ../sdbg_base_exception.hxx \
-			  ../sdbg_base_symtab.hxx \
-		          ../sdbg_event_manager_impl.hxx  \
-			  ../sdbg_std.hxx \
-		          ../sdbg_base_launchmon.hxx \
-   			  ../sdbg_base_symtab_impl.hxx \
-		          ../sdbg_opt.hxx \
-			  sdbg_linux_bp.hxx \
-	          	  sdbg_linux_launchmon.hxx  \
-			  sdbg_linux_ptracer_impl.hxx  \
-			  sdbg_linux_symtab_impl.hxx \
-			  sdbg_proc_service.hxx \
-			  sdbg_linux_driver.hxx  \
-			  sdbg_linux_mach.hxx \
-		          sdbg_linux_std.hxx \
-		          sdbg_linux_ttracer.hxx \
-			  sdbg_linux_driver_impl.hxx \
-			  sdbg_linux_ptracer.hxx \
-			  sdbg_linux_symtab.hxx \
-		          sdbg_linux_ttracer_impl.hxx \
-			  sdbg_linux_thr_db.hxx 
-else
-launchmon_SOURCES       = main.cxx \
-                          sdbg_linux_launchmon.cxx  \
+                          sdbg_linux_launchmon.cxx \
                           lmon_api/lmon_lmonp_msg.cxx \
                           sdbg_linux_mach.cxx \
                           lmon_api/lmon_say_msg.cxx \
@@ -142,16 +91,8 @@ launchmon_SOURCES       = main.cxx \
                           sdbg_linux_symtab.hxx \
                           sdbg_linux_ttracer_impl.hxx \
                           sdbg_linux_thr_db.hxx
-endif
 
-if WITH_ALPS
-launchmon_LDADD         = @LIBELF@ @LIBALPS@ @LIBDL@
-else
 launchmon_LDADD         = @LIBELF@ @LIBDL@
-endif
-
-
-#launchmon_LDADD         = @LIBELF@ @LIBDL@
 launchmon_CFLAGS        = @LNCHR_BIT_FLAGS@ #$(AM_CFLAGS) 
 launchmon_CXXFLAGS      = @LNCHR_BIT_FLAGS@ #$(AM_CXXFLAGS)
 launchmon_LDFLAGS       = -rdynamic @LNCHR_BIT_FLAGS@ $(AM_LDFLAGS) 
