some changes based on SLURM testing

--- a/test/src/test.attach_1_remote.in
+++ b/test/src/test.attach_1_remote.in
@@ -52,6 +52,7 @@ fi
 SIGNUM=10
 MPI_JOB_LAUNCHER_PATH=@TJLPATH@
 RM_TYPE=@RMTP@
+export LMON_PREFIX=@LMONPREFIX@
 export LMON_LAUNCHMON_ENGINE_PATH=@LMON@
 export FEN_RM_DISTRIBUTED=1
 
