--- a/test/src/test.attach_3_callsafterfail.in
+++ b/test/src/test.attach_3_callsafterfail.in
@@ -34,6 +34,7 @@
 #
  
 SIGNUM=10
+export LMON_PREFIX=@LMONPREFIX@
 export LMON_LAUNCHMON_ENGINE_PATH=@LMON@
 export LMON_INVALIDPID_TEST=1
 export LMON_CALLS_AFTER_FAIL_TEST=1
