--- a/test/src/test.launch_1.in
+++ b/test/src/test.launch_1.in
@@ -46,6 +46,7 @@ fi
 
 NUMTASKS=`expr $NUMNODES \* @SMP@`
 
+export LMON_PREFIX=@LMONPREFIX@
 export LMON_LAUNCHMON_ENGINE_PATH=@LMON@
 
 $NOHUP fe_launch_smoketest@EXE@ `pwd`/simple_MPI@EXE@ $NUMTASKS $NUMNODES pdebug `pwd`/be_kicker@EXE@
