--- a/test/src/test.attach_1_pdebugmax.in
+++ b/test/src/test.attach_1_pdebugmax.in
@@ -40,6 +40,7 @@ WAITAMOUNT=$NUMNODES
 SIGNUM=10
 MPI_JOB_LAUNCHER_PATH=@TJLPATH@
 RM_TYPE=@RMTP@
+export LMON_PREFIX=@LMONPREFIX@
 export LMON_LAUNCHMON_ENGINE_PATH=@LMON@
 
 if test "x$RM_TYPE" = "xbgrm" ; then
