--- a/test/src/test.attach_1_pdebugmax.in
+++ b/test/src/test.attach_1_pdebugmax.in
@@ -57,7 +57,7 @@ elif test "x$RM_TYPE" = "xalps" ; then
   $MPI_JOB_LAUNCHER_PATH -n $NUMTASKS `pwd`/hang_on_SIGUSR1@EXE@ &
 elif test "x$RM_TYPE" = "xorte" ; then
   WAITAMOUNT=`expr $WAITAMOUNT`
-  $MPI_JOB_LAUNCHER_PATH -np $NUMTASKS `pwd`/hang_on_SIGUSR1@EXE@ &
+  $MPI_JOB_LAUNCHER_PATH -gmca orte_enable_debug_cospawn_while_running 1 -np $NUMTASKS `pwd`/hang_on_SIGUSR1@EXE@ &
 else
   echo "This RM is not supported yet" 
 fi
