--- a/launchmon/src/linux/Makefile.in
+++ b/launchmon/src/linux/Makefile.in
@@ -268,6 +268,7 @@ launchmon_SOURCES = main.cxx \
                           ../sdbg_base_launchmon.hxx \
                           ../sdbg_base_symtab_impl.hxx \
                           ../sdbg_opt.hxx \
+			  ../sdbg_rm_map.hxx \
                           sdbg_linux_bp.hxx \
                           sdbg_linux_launchmon.hxx  \
                           sdbg_linux_ptracer_impl.hxx  \
