package.conf update

--- a/package.conf
+++ b/package.conf
@@ -7,6 +7,8 @@
 # The LLNL's package configuration script for LaunchMON
 #
 # Update:
+#         Jul 21 2010 DHA: Updated for 0.7.2beta 
+#
 #         Mar 09 2008 DHA: Updated for 0.7.0 release including
 #                          BlueGene/P support     
 #         Dec 15 2008 DHA: Updated for 0.6.4 release which includes 
@@ -15,9 +17,9 @@
 #
 #
 
-_vers=0.7
+_vers=0.7.2
 PKG_NAME=launchmon-${_vers}
-PKG_VERSION=9
+PKG_VERSION=10
 PKG_SECTION=tools
 PKG_SHORT_DESCRIPTION="LaunchMON: Tool daemon launching infrastructure v${_vers}"  
 PKG_MAINTAINER="Dong H. Ahn <ahn1@llnl.gov>"
@@ -39,7 +41,7 @@ PKG_doc="LaunchMON doc: ${prefix}/man/man3/LMON_fe_launchAndSpawnDaemons.3"
 pkg_build()
 { 
 
-  ./configure --prefix=$prefix --with-rm=slurm --with-bootfabric=pmgr 
+  ./configure --prefix=$prefix --with-rm=slurm 
   make 
 
   return 0
