package.conf update

--- a/package.conf
+++ b/package.conf
@@ -19,11 +19,11 @@
 
 _vers=0.7.2
 PKG_NAME=launchmon-${_vers}
-PKG_VERSION=10
+PKG_VERSION=13
 PKG_SECTION=tools
 PKG_SHORT_DESCRIPTION="LaunchMON: Tool daemon launching infrastructure v${_vers}"  
 PKG_MAINTAINER="Dong H. Ahn <ahn1@llnl.gov>"
-PKG_BUILDREQUIRES="lcc,gcc,mvapich-gnu,icc,mvapich-intel"
+PKG_BUILDREQUIRES="mvapich-gnu,icc,mvapich-intel"
 PKG_WRAPPERS=launchmon 
 
 # This could be the default install, otherwise comment this out
@@ -31,7 +31,7 @@ PKG_WRAPPERS=launchmon
 
 #
 PKG_DK_CATEGORY="performance/profile"
-PKG_HELP="\
+PKG_DK_HELP="\
 Loads LaunchMON \n \
 Modifies \$MANPATH and \$PATH.\n For API usage, \
 see man pages.\n\n"
