code refactoring/cleanup and added full MPIR_attach_fifo support

--- a/package.conf
+++ b/package.conf
@@ -7,8 +7,9 @@
 # The LLNL's package configuration script for LaunchMON
 #
 # Update:
+#         Oct 27 2010 DHA: Updated for 0.7.2 official release  
+#                          of 0.7
 #         Jul 21 2010 DHA: Updated for 0.7.2beta 
-#
 #         Mar 09 2008 DHA: Updated for 0.7.0 release including
 #                          BlueGene/P support     
 #         Dec 15 2008 DHA: Updated for 0.6.4 release which includes 
@@ -19,7 +20,7 @@
 
 _vers=0.7.2
 PKG_NAME=launchmon-${_vers}
-PKG_VERSION=13
+PKG_VERSION=14
 PKG_SECTION=tools
 PKG_SHORT_DESCRIPTION="LaunchMON: Tool daemon launching infrastructure v${_vers}"  
 PKG_MAINTAINER="Dong H. Ahn <ahn1@llnl.gov>"
